--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
                     </div>
                 </h1>
             </div>
+
+            <div class="buttons">
+                <a href="#" class="button buy shadow">
+                    <img src="assets/shopping-bag-01.svg" alt="shopping">
+                    COMPRAR AGORA
+                </a>
+
+                <a href="#" class="button play">
+                    <span class="shadow">
+                        <img src="assets/play.svg" alt="play">
+                    </span>
+                    VEJA EM AÇÃO
+                </a>
+            </div>
         </div>
     </section>
 </body>
