--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    <header>
+    <header class="top">
         <a href="#">
             <img src="assets/logo.svg" alt="logo">
         </a>
@@ -44,6 +44,81 @@
                     VEJA EM AÇÃO
                 </a>
             </div>
+        </div>
+
+        <div>
+            <div class="content">
+                <img src="assets/ellipse.svg" alt="circle blue">
+                <img src="assets/patins-image.png" alt="patins">
+                <img src="assets/stars-1.svg" alt="stars">
+                <img src="assets/stars-2.svg" alt="stars">
+            </div>
+        </div>
+    </section>
+
+    <section class="banner">
+        <div class="scroller bg-gradient-anamation">
+            <div class="rolling">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+                <img src="assets/banner.svg" alt="banner">
+            </div>
+        </div>
+    </section>
+
+    <section class="galery">
+        <header>
+            <span>GALERIA DE FOTOS</span>
+            <h2>#usesnitap por aí</h2>
+        </header>
+
+        <div class="content">
+            <figure>
+                <img src="assets/image 01.png" alt="mulher de patins">
+                <figcaption>
+                    <img src="assets/person.png" alt="pessoa do instagram">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="assets/image 02.png" alt="pessoas andando de patins">
+                <figcaption>
+                    <img src="assets/person.png" alt="pessoa do instagram">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure >
+                <img src="assets/image 03.png" alt="pessoa amarando patins">
+                <figcaption>
+                    <img src="assets/person.png" alt="pessoa do instagram">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="assets/image 04.png" alt="mulher de patins">
+                <figcaption>
+                    <img src="assets/person.png" alt="pessoa do instagram">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
         </div>
     </section>
 </body>
